--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ android-gradle-plugin = "7.2.0-alpha07"
 android-lint = "30.0.2"
 
 # Android X
-androidx-compose = "1.1.1"
+androidx-compose = "1.2.0-beta01"
 androidx-lifecycle = "2.4.1"
 androidx-room = "2.5.0-alpha01"
 androidx-test = "1.3.0"
